# stat

./: .gitignore  .pre-commit-config.yaml  .pyrightconfig.json  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
pytemp/: module.py
tests/: test_module1.py
