[tool.poetry]
name = "pytemp"
version = "0.1.1"
description = "Template for Python projects"
authors = ["Stephen Singer <stephen.singer.098@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
ruff = "^0.0.263"
black = "^22.3.0"
isort = "^5.9.3"
pyright = "^1.1.204"
bandit = "^1.7.0"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
