[metadata]
name = pytemp
version = 0.1.1
description = Template for Python projects
author = Stephen Singer
author_email = stephen.singer.098@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ayumu098/pytemp

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
where = python_template
